--- a/docker-compose-kafka.yml
+++ b/docker-compose-kafka.yml
@@ -43,17 +43,20 @@ services:
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka1:19092
       SCHEMA_REGISTRY_HOST_NAME: kafka-schema-registry
+      SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_METHODS: GET,POST,PUT,OPTIONS
+      SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_ORIGIN: '*'
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
     depends_on:
       - zoo1
       - kafka1  
+
   schema-registry-ui:
     image: landoop/schema-registry-ui:0.9.5
     hostname: kafka-schema-registry-ui
     ports:
       - "8001:8000"
     environment:
-      SCHEMAREGISTRY_URL: http://kafka-schema-registry:8081/
+      SCHEMAREGISTRY_URL: http://kafka-schema-registry:8081
       PROXY: "true"
     depends_on:
       - kafka-schema-registry  
@@ -73,7 +76,7 @@ services:
       - zoo1
       - kafka1
       - kafka-schema-registry  
-  
+   
   kafka-topics-ui:
     image: landoop/kafka-topics-ui:0.9.4
     hostname: kafka-topics-ui
